[project]
name = "rag-demo"
version = "0.1.0"
description = "End-to-end RAG pipeline demo using Groq, Llama, and vector databases"
requires-python = ">=3.10"

dependencies = [
    "groq",
    "chromadb>=0.5.5",
    "sentence-transformers>=2.7.0",
    "numpy>=1.26.0",
    "tiktoken"
]

[tool.uv]
dev-dependencies = [
    "ipython",
]
